--- a/ClientApp/src/index.generated.css
+++ b/ClientApp/src/index.generated.css
@@ -447,6 +447,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: -0.5rem;
   margin-right: -0.5rem;
 }
+.mx-12 {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -528,17 +532,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(252 253 254 / var(--tw-bg-opacity));
 }
-.bg-\[\#4064AC\] {
+.bg-\[\#5865F2\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(64 100 172 / var(--tw-bg-opacity));
-}
-.bg-\[\#1C9CEA\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(28 156 234 / var(--tw-bg-opacity));
-}
-.bg-\[\#D64937\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(214 73 55 / var(--tw-bg-opacity));
+  background-color: rgb(88 101 242 / var(--tw-bg-opacity));
 }
 .px-4 {
   padding-left: 1rem;
@@ -559,10 +555,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 .text-center {
   text-align: center;
