--- a/ClientApp/src/index.generated.css
+++ b/ClientApp/src/index.generated.css
@@ -449,6 +449,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .right-0 {
   right: 0px !important;
 }
+.right-4 {
+  right: 1rem !important;
+}
 .z-10 {
   z-index: 10 !important;
 }
@@ -531,6 +534,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-8 {
   height: 2rem !important;
 }
+.h-6 {
+  height: 1.5rem !important;
+}
 .w-full {
   width: 100% !important;
 }
@@ -539,6 +545,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-56 {
   width: 14rem !important;
+}
+.w-10 {
+  width: 2.5rem !important;
+}
+.w-6 {
+  width: 1.5rem !important;
 }
 .max-w-\[525px\] {
   max-width: 525px !important;
@@ -562,6 +574,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .cursor-pointer {
   cursor: pointer !important;
+}
+.select-none {
+  -webkit-user-select: none !important;
+          user-select: none !important;
+}
+.appearance-none {
+  -webkit-appearance: none !important;
+          appearance: none !important;
 }
 .flex-col {
   flex-direction: column !important;
@@ -618,6 +638,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border {
   border-width: 1px !important;
 }
+.border-4 {
+  border-width: 4px !important;
+}
 .border-gray-300 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
@@ -637,6 +660,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-\[\#5865F2\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(88 101 242 / var(--tw-bg-opacity)) !important;
+}
+.bg-gray-300 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity)) !important;
 }
 .p-1 {
   padding: 0.25rem !important;
@@ -688,9 +715,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 0.25rem !important;
   padding-bottom: 0.25rem !important;
 }
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
 .pt-2 {
   padding-top: 0.5rem !important;
 }
@@ -702,6 +726,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .text-center {
   text-align: center !important;
+}
+.align-middle {
+  vertical-align: middle !important;
 }
 .text-3xl {
   font-size: 1.875rem !important;
@@ -813,6 +840,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 .duration-200 {
   transition-duration: 200ms !important;
 }
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1) !important;
+}
+.checked\:right-0:checked {
+  right: 0px !important;
+}
+.checked\:bg-blue-600:checked {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity)) !important;
+}
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
@@ -918,10 +955,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-left: 0.75rem !important;
     padding-right: 0.75rem !important;
   }
-
-  .sm\:pb-16 {
-    padding-bottom: 4rem !important;
-  }
 }
 @media (min-width: 768px) {
 
@@ -951,24 +984,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-left: 60px !important;
     padding-right: 60px !important;
   }
-
-  .md\:pb-20 {
-    padding-bottom: 5rem !important;
-  }
 }
 @media (min-width: 1024px) {
 
   .lg\:w-full {
     width: 100% !important;
-  }
-
-  .lg\:pb-28 {
-    padding-bottom: 7rem !important;
-  }
-}
-@media (min-width: 1280px) {
-
-  .xl\:pb-32 {
-    padding-bottom: 8rem !important;
   }
 }
