--- a/ClientApp/src/index.generated.css
+++ b/ClientApp/src/index.generated.css
@@ -434,6 +434,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .relative {
   position: relative !important;
 }
+.right-0 {
+  right: 0px !important;
+}
+.right-4 {
+  right: 1rem !important;
+}
 .top-1 {
   top: 0.25rem !important;
 }
@@ -446,22 +452,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bottom-1 {
   bottom: 0.25rem !important;
 }
-.right-0 {
-  right: 0px !important;
-}
-.right-4 {
-  right: 1rem !important;
-}
 .z-10 {
   z-index: 10 !important;
-}
-.-mx-4 {
-  margin-left: -1rem !important;
-  margin-right: -1rem !important;
 }
 .mx-auto {
   margin-left: auto !important;
   margin-right: auto !important;
+}
+.-mx-4 {
+  margin-left: -1rem !important;
+  margin-right: -1rem !important;
 }
 .-mx-2 {
   margin-left: -0.5rem !important;
@@ -470,18 +470,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mx-12 {
   margin-left: 3rem !important;
   margin-right: 3rem !important;
-}
-.mb-10 {
-  margin-bottom: 2.5rem !important;
-}
-.mb-6 {
-  margin-bottom: 1.5rem !important;
-}
-.mb-12 {
-  margin-bottom: 3rem !important;
-}
-.mb-2 {
-  margin-bottom: 0.5rem !important;
 }
 .ml-10 {
   margin-left: 2.5rem !important;
@@ -500,6 +488,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mt-2 {
   margin-top: 0.5rem !important;
+}
+.mb-10 {
+  margin-bottom: 2.5rem !important;
+}
+.mb-6 {
+  margin-bottom: 1.5rem !important;
+}
+.mb-12 {
+  margin-bottom: 3rem !important;
+}
+.mb-2 {
+  margin-bottom: 0.5rem !important;
 }
 .block {
   display: block !important;
@@ -525,9 +525,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-screen {
   height: 100vh !important;
 }
-.h-11 {
-  height: 2.75rem !important;
-}
 .h-16 {
   height: 4rem !important;
 }
@@ -536,6 +533,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .h-6 {
   height: 1.5rem !important;
+}
+.h-11 {
+  height: 2.75rem !important;
 }
 .w-full {
   width: 100% !important;
@@ -552,14 +552,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-6 {
   width: 1.5rem !important;
 }
+.max-w-7xl {
+  max-width: 80rem !important;
+}
 .max-w-\[525px\] {
   max-width: 525px !important;
 }
 .max-w-\[160px\] {
   max-width: 160px !important;
-}
-.max-w-7xl {
-  max-width: 80rem !important;
 }
 .flex-shrink-0 {
   flex-shrink: 0 !important;
@@ -626,14 +626,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .overflow-hidden {
   overflow: hidden !important;
 }
-.rounded-lg {
-  border-radius: 0.5rem !important;
-}
 .rounded-md {
   border-radius: 0.375rem !important;
 }
 .rounded-full {
   border-radius: 9999px !important;
+}
+.rounded-lg {
+  border-radius: 0.5rem !important;
 }
 .border {
   border-width: 1px !important;
@@ -649,47 +649,27 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
 }
-.bg-\[\#FCFDFE\] {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(252 253 254 / var(--tw-bg-opacity)) !important;
-}
 .bg-gray-100 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
 }
-.bg-\[\#5865F2\] {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(88 101 242 / var(--tw-bg-opacity)) !important;
-}
 .bg-gray-300 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity)) !important;
+}
+.bg-\[\#FCFDFE\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(252 253 254 / var(--tw-bg-opacity)) !important;
+}
+.bg-\[\#5865F2\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(88 101 242 / var(--tw-bg-opacity)) !important;
 }
 .p-1 {
   padding: 0.25rem !important;
 }
 .p-2 {
   padding: 0.5rem !important;
-}
-.px-4 {
-  padding-left: 1rem !important;
-  padding-right: 1rem !important;
-}
-.py-16 {
-  padding-top: 4rem !important;
-  padding-bottom: 4rem !important;
-}
-.px-10 {
-  padding-left: 2.5rem !important;
-  padding-right: 2.5rem !important;
-}
-.py-3 {
-  padding-top: 0.75rem !important;
-  padding-bottom: 0.75rem !important;
-}
-.px-5 {
-  padding-left: 1.25rem !important;
-  padding-right: 1.25rem !important;
 }
 .py-4 {
   padding-top: 1rem !important;
@@ -711,9 +691,32 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 0.5rem !important;
   padding-right: 0.5rem !important;
 }
+.px-4 {
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
+}
 .py-1 {
   padding-top: 0.25rem !important;
   padding-bottom: 0.25rem !important;
+}
+.py-16 {
+  padding-top: 4rem !important;
+  padding-bottom: 4rem !important;
+}
+.px-10 {
+  padding-left: 2.5rem !important;
+  padding-right: 2.5rem !important;
+}
+.py-3 {
+  padding-top: 0.75rem !important;
+  padding-bottom: 0.75rem !important;
+}
+.px-5 {
+  padding-left: 1.25rem !important;
+  padding-right: 1.25rem !important;
+}
+.pt-4 {
+  padding-top: 1rem !important;
 }
 .pt-2 {
   padding-top: 0.5rem !important;
@@ -730,14 +733,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .align-middle {
   vertical-align: middle !important;
 }
-.text-3xl {
-  font-size: 1.875rem !important;
-  line-height: 2.25rem !important;
-}
-.text-base {
-  font-size: 1rem !important;
-  line-height: 1.5rem !important;
-}
 .text-sm {
   font-size: 0.875rem !important;
   line-height: 1.25rem !important;
@@ -746,23 +741,23 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 1.25rem !important;
   line-height: 1.75rem !important;
 }
+.text-base {
+  font-size: 1rem !important;
+  line-height: 1.5rem !important;
+}
 .text-xs {
   font-size: 0.75rem !important;
   line-height: 1rem !important;
 }
-.font-bold {
-  font-weight: 700 !important;
+.text-3xl {
+  font-size: 1.875rem !important;
+  line-height: 2.25rem !important;
 }
 .font-medium {
   font-weight: 500 !important;
 }
-.text-white {
-  --tw-text-opacity: 1 !important;
-  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
-}
-.text-\[\#adadad\] {
-  --tw-text-opacity: 1 !important;
-  color: rgb(173 173 173 / var(--tw-text-opacity)) !important;
+.font-bold {
+  font-weight: 700 !important;
 }
 .text-gray-800 {
   --tw-text-opacity: 1 !important;
@@ -779,6 +774,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-700 {
   --tw-text-opacity: 1 !important;
   color: rgb(55 65 81 / var(--tw-text-opacity)) !important;
+}
+.text-white {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+.text-\[\#adadad\] {
+  --tw-text-opacity: 1 !important;
+  color: rgb(173 173 173 / var(--tw-text-opacity)) !important;
 }
 .underline {
   -webkit-text-decoration-line: underline !important;
@@ -946,24 +949,24 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 @media (min-width: 640px) {
 
-  .sm\:px-12 {
-    padding-left: 3rem !important;
-    padding-right: 3rem !important;
-  }
-
   .sm\:px-3 {
     padding-left: 0.75rem !important;
     padding-right: 0.75rem !important;
   }
+
+  .sm\:px-12 {
+    padding-left: 3rem !important;
+    padding-right: 3rem !important;
+  }
 }
 @media (min-width: 768px) {
 
-  .md\:mb-16 {
-    margin-bottom: 4rem !important;
-  }
-
   .md\:ml-6 {
     margin-left: 1.5rem !important;
+  }
+
+  .md\:mb-16 {
+    margin-bottom: 4rem !important;
   }
 
   .md\:block {
