--- a/ClientApp/src/index.generated.css
+++ b/ClientApp/src/index.generated.css
@@ -455,6 +455,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .z-10 {
   z-index: 10 !important;
 }
+.z-50 {
+  z-index: 50 !important;
+}
 .mx-auto {
   margin-left: auto !important;
   margin-right: auto !important;
@@ -555,8 +558,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-7xl {
   max-width: 80rem !important;
 }
-.max-w-\[525px\] {
-  max-width: 525px !important;
+.max-w-\[675px\] {
+  max-width: 675px !important;
+}
+.max-w-\[475px\] {
+  max-width: 475px !important;
 }
 .max-w-\[160px\] {
   max-width: 160px !important;
@@ -645,6 +651,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-border-opacity: 1 !important;
   border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
 }
+.border-\[\#E9EDF4\] {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(233 237 244 / var(--tw-border-opacity)) !important;
+}
+.border-\[\#006bef\] {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(0 107 239 / var(--tw-border-opacity)) !important;
+}
 .bg-white {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
@@ -660,6 +674,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-\[\#FCFDFE\] {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(252 253 254 / var(--tw-bg-opacity)) !important;
+}
+.bg-\[\#007bff\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 123 255 / var(--tw-bg-opacity)) !important;
 }
 .bg-\[\#5865F2\] {
   --tw-bg-opacity: 1 !important;
@@ -774,6 +792,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-700 {
   --tw-text-opacity: 1 !important;
   color: rgb(55 65 81 / var(--tw-text-opacity)) !important;
+}
+.text-black {
+  --tw-text-opacity: 1 !important;
+  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
 }
 .text-white {
   --tw-text-opacity: 1 !important;
